# flagday

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  tone_row.py
.github/workflows/: python.yml  score.yml
assets/: flagday.fzz
config/: base.yaml  composition.yaml
flagday/: __init__.py
flagday/composition/: __init__.py  maker.py  series.py
flagday/config/: __init__.py  composition.py  device.py
stylesheets/: framedScoreSpanner.ily  preamble.ily
tests/composition/: test_series.py
tests/config/: example_base_good.yaml  test_device.py
