[project]
name = "flagday"
version = "0.1.0"
description = "off the grid, decentralized cruising"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "abjad>=3.31",
    "meshtastic>=2.7.6",
    "mutwo-core>=2.0.0",
    "mutwo-midi>=0.12.1",
    "mutwo-music>=0.29.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
]
