[project]
name = "flagday"
version = "0.1.0"
description = "off the grid, decentralized cruising"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "abjad>=3.31",
    "ghostscript>=0.8.1",
    "meshtastic>=2.7.6",
    "pyyaml>=6.0.3",
    "rtttl>=0.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
]
